# chat-with-ai

./: Cargo.toml  README.md
src/: base_body.rs  demo_get_oss_and_chat.rs  demo_read_file_and_chat.rs  demo_send_img_and_chat.rs  main.rs  oss.rs
src/deepseek/: base_body.rs  mod.rs
src/img_chat/: mod.rs  send_img_and_chat.rs
src/ollama/: base_body.rs  mod.rs
src/ollama/demo/: demo_get_oss_and_chat.rs  demo_read_file_and_chat.rs  demo_send_img_and_chat.rs  mod.rs
