[package]
name = "chat-with-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.0", features = ["json", "stream"] }
tokio = {version = "1.40.0", features = ["full"]}
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
futures = "0.3"